adds some swagger documentation
